Fix styling and word wrap on shortcut lists

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,22 @@ fieldset legend small {
 	margin: 0.5rem;
 }
 
+.shortcut-list {
+	padding: 0;
+	margin-top: -28px;
+}
+
+.shortcut-list .btn-link {
+	text-align: left;
+	white-space: initial;
+	padding: 0;
+}
+
+.btn.btn-link {
+	overflow: visible;
+	width: 100%;
+}
+
 .btn-group .radio-inline, .btn-group-vertical .radio-inline {
 	padding: 0;
 	margin: 0;
